env/dev/peerauth.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: peer-auth-policy
spec:
  mtls:
    # mode: STRICT
    mode: PERMISSIVE
