env/dev/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vault
  namespace: vault
spec:
  gateways:
  - main.istio-system.svc.cluster.local
  hosts:
  - vault.staging.dso.mil
  http:
  - route:
    - destination:
        host: vault-ui.vault.svc.cluster.local
        port:
          number: 8200
